// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RangeCard /> should be render correctly 1`] = `
<body>
  <div>
    <div
      class="card"
      data-testid="card"
    >
      <img
        class="card-image"
        data-testid="card-image"
        loading="lazy"
        sizes="(min-width:3200px) 800px, 1200px"
        src="https://vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/126268/cap-68051-126268.jpg"
        srcset="https://vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/126268/cap-68051-126268.jpg 320w, https://vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/126268/cap-68051-126268.jpg 800w, https://vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/126268/cap-68051-126268.jpg 1200w"
      />
      <div
        class="title"
      >
        <a
          class="heading link -black -large"
          data-testid="link"
          href="/bmw-car-leasing/2-series.html"
        >
          2 Series
        </a>
      </div>
      <div
        class="-flex-h"
      >
        <div
          class="price -large -black"
        >
          <div
            class="price--label"
          >
            from
          </div>
          <span
            class="price--sub"
          >
            £
          </span>
          <span
            class="price--pounds"
          >
            191
          </span>
          <span
            class="price--sub"
          >
            .
            91
          </span>
          <div
            class="price--label"
          >
            Per Month Inc.VAT
          </div>
        </div>
        <a
          class="button -teal -regular -solid"
          data-testid="link"
          href="/bmw-car-leasing/2-series.html"
        >
          <div
            class="button--inner"
          >
            View All
          </div>
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`<RangeCard /> should be render correctly with all makes page 1`] = `
<body>
  <div>
    <div
      class="card"
      data-testid="card"
    >
      <img
        class="card-image"
        data-testid="card-image"
        loading="lazy"
        sizes="(min-width:3200px) 800px, 1200px"
        src="https://vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/126268/cap-68051-126268.jpg"
        srcset="https://vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/126268/cap-68051-126268.jpg 320w, https://vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/126268/cap-68051-126268.jpg 800w, https://vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/126268/cap-68051-126268.jpg 1200w"
      />
      <div
        class="title"
      >
        <a
          class="heading link -black -large"
          data-testid="link"
          href="/bmw-car-leasing.html"
        >
          bmw
        </a>
      </div>
      <div
        class="-flex-h"
      >
        <div
          class="price -large -black"
        >
          <div
            class="price--label"
          >
            from
          </div>
          <span
            class="price--sub"
          >
            £
          </span>
          <span
            class="price--pounds"
          >
            191
          </span>
          <span
            class="price--sub"
          >
            .
            91
          </span>
          <div
            class="price--label"
          >
            Per Month Inc.VAT
          </div>
        </div>
        <a
          class="button -teal -regular -solid"
          data-testid="link"
          href="/bmw-car-leasing.html"
        >
          <div
            class="button--inner"
          >
            View All
          </div>
        </a>
      </div>
    </div>
  </div>
</body>
`;
